--- a/xorg-macros.m4.in
+++ b/xorg-macros.m4.in
@@ -1503,9 +1503,13 @@ AC_LANG_CASE(
 	[C], [
 		AC_REQUIRE([AC_PROG_CC_C99])
 		define([PREFIX], [C])
+		define([CACHE_PREFIX], [cc])
+		define([COMPILER], [$CC])
 	],
 	[C++], [
 		define([PREFIX], [CXX])
+		define([CACHE_PREFIX], [cxx])
+		define([COMPILER], [$CXX])
 	]
 )
 
@@ -1550,8 +1554,8 @@ m4_foreach([flag], m4_cdr($@), [
 		PREFIX[FLAGS]="$PREFIX[FLAGS] ]flag["
 
 dnl Some hackery here since AC_CACHE_VAL can't handle a non-literal varname
-		AC_MSG_CHECKING([if $CC supports ]flag[])
-		cacheid=AS_TR_SH([xorg_cv_cc_flag_]flag[])
+		AC_MSG_CHECKING([if ]COMPILER[ supports]flag[])
+		cacheid=AS_TR_SH([xorg_cv_]CACHE_PREFIX[_flag_]flag[])
 		AC_CACHE_VAL($cacheid,
 			     [AC_LINK_IFELSE([AC_LANG_PROGRAM([int i;])],
 					     [eval $cacheid=yes],
