Use the right variable names for the compiler flags in XORG_TESTSET_CFLAG
Whilst populating the xorg_cv_ cache entries, and the subsequent
xorg_testset_, we always include the FLAG_PREFIX in the name, to
distinguish between C and C++ iterations. However, in the body of the
test function, we dropped the FLAG_PREFIX expansion and so always used
the empty string and hence did not correctly detect incorrect flags.

The bug was introduced with
commit 51f69514e65637f575df901ef942515e70314f6a
Author: Chase Douglas <chase.douglas@canonical.com>
Date:   Mon Mar 12 11:49:28 2012 -0700

    Separate unknown warning options by language

Reported-and-tested-by: Sedat Dilek <sedat.dilek@gmail.com>
Signed-off-by: Chris Wilson <chris@chris-wilson.co.uk>
Cc: Sedat Dilek <sedat.dilek@gmail.com>
Cc: Chase Douglas <chase.douglas@canonical.com>
Cc: Gaetan Nadon<memsize@videotron.ca>
Acked-by: Alan Coopersmith <alan.coopersmith@oracle.com>

--- a/xorg-macros.m4.in
+++ b/xorg-macros.m4.in
@@ -1543,11 +1543,11 @@ fi
 found="no"
 m4_foreach([flag], m4_cdr($@), [
 	if test $found = "no" ; then
-		if test "x$xorg_testset_unknown_warning_option" = "xyes" ; then
+		if test "x$xorg_testset_]CACHE_PREFIX[_unknown_warning_option" = "xyes" ; then
 			PREFIX[FLAGS]="$PREFIX[FLAGS] -Werror=unknown-warning-option"
 		fi
 
-		if test "x$xorg_testset_unused_command_line_argument" = "xyes" ; then
+		if test "x$xorg_testset_]CACHE_PREFIX[_unused_command_line_argument" = "xyes" ; then
 			PREFIX[FLAGS]="$PREFIX[FLAGS] -Werror=unused-command-line-argument"
 		fi
 
