--- a/project.config
+++ b/project.config
@@ -1,7 +1,6 @@
 [access]
-	inheritFrom = scm/acls/domain_system
+	inheritFrom = scm/acls/domain_graphics_and_ui_framework
 [project]
-	state = active
 	description = "Domain: System;"\n\
 "Licenses: MIT-style,FSF;"\n\
 
