--- a/project.config
+++ b/project.config
@@ -1,6 +1,5 @@
 [access]
 	inheritFrom = scm/acls/domain_graphics_and_ui_framework
 [project]
-	description = "Domain: System;"\n\
-"Licenses: MIT-style,FSF;"\n\
-
+	description = "Domain: Graphics & UI framework;"\n\
+"Licenses: MIT-style,FSF;"
