--- a/project.config
+++ b/project.config
@@ -1,5 +1,5 @@
 [access]
 	inheritFrom = scm/acls/domain_graphics_and_ui_framework
 [project]
-	description = "Domain: Graphics & UI framework;"\n\
+	description = "Domain: Graphics & UI Framework;"\n\
 "Licenses: MIT-style,FSF;"
