Project settings updated

--- a/project.config
+++ b/project.config
@@ -1,5 +1,4 @@
 [access]
 	inheritFrom = scm/acls/domain_graphics_system/input_management
 [project]
-	description = "Domain: Graphics & UI Framework;"\n\
-"Licenses: MIT-style,FSF;"
+	description = "Domain: Graphics System / Input Management;"
